# cognitron-engine

./: CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.py
docs/: api.md  architecture.md  changelog.md  index.md  license.md
docs/api/: core.md
docs/examples/: basic.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: advanced_usage.py  basic_usage.py
src/cognitron/: __init__.py  core.py
src/deep_reasoner/: __init__.py  core.py  exceptions.py  types.py
tests/: test_deep_reasoner.py  test_integration.py
