[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitron"
version = "0.1.0"
description = "Advanced reasoning engine for complex problem-solving and analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cognitron Contributors", email = "hello@cognitron.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/prakashgbid/cognitron-engine"
Documentation = "https://prakashgbid.github.io/cognitron-engine"
Repository = "https://github.com/prakashgbid/cognitron-engine"
Issues = "https://github.com/prakashgbid/cognitron-engine/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
